# mcpjail

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile
.github/workflows/: ci.yml  pages.yml  release.yml
crates/mcpjail-cli/: Cargo.toml
crates/mcpjail-cli/src/: main.rs
crates/mcpjail-policy/: Cargo.toml
crates/mcpjail-policy/src/: builtin.rs  error.rs  lib.rs  policy.rs
crates/mcpjail-proxy/: Cargo.toml
crates/mcpjail-proxy/src/: error.rs  filter.rs  lib.rs  protocol.rs  validator.rs
crates/mcpjail-runtime/: Cargo.toml
crates/mcpjail-runtime/src/: container.rs  error.rs  lib.rs  macos_sandbox.rs  security.rs
docs/: CNAME  SECURITY_BLOCKING_REFERENCE.md  index.html  install.sh  styles.css
policies/: database.yaml  development.yaml  network-isolated.yaml  readonly.yaml  strict.yaml
seccomp/: default.json  with-exec.json
test/: README.md  integration_test.py  mock_mcp_server.py  real_mcp_audit_test.py  test_security.py  vulnerable_mcp_server.py
