[package]
name = "mcpjail-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "MCP Jail CLI - Secure MCP server sandbox"

[[bin]]
name = "mcpjail"
path = "src/main.rs"

[dependencies]
mcpjail-proxy.workspace = true
mcpjail-runtime.workspace = true
mcpjail-policy.workspace = true

tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
futures.workspace = true
bollard.workspace = true
