[package]
name = "mcpjail-policy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Policy engine for MCP Jail security controls"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
